--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,7 @@ target_compile_definitions(AudioPluginExample
 target_link_libraries(AudioPluginExample
     PRIVATE
         # AudioPluginData           # If we'd created a binary data target, we'd link to it here
+        juce::juce_dsp
         juce::juce_audio_utils
     PUBLIC
         juce::juce_recommended_config_flags
